--- a/HW2/HW2_3.ipynb
+++ b/HW2/HW2_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HW2-3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPLtYKCyC90ouQTou2NH7aG",
+      "authorship_tag": "ABX9TyMVKlTmQLh2IWv+V/ORJupH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/pauline-johnson/machine-learning/blob/master/HW2_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/pauline-johnson/machine-learning/blob/master/HW2/HW2_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -31,7 +31,8 @@
         "colab_type": "text"
       },
       "source": [
-        "# Generates the average MNIST Digit wuth Keras dataset"
+        "# Generates the average MNIST Digit with Keras dataset\n",
+        "A majority of this code is from ch.1 of the textbook, which can be found at http://faculty.neu.edu.cn/yury/AAI/Textbook/Deep%20Learning%20with%20Python.pdf "
       ]
     },
     {
@@ -39,11 +40,11 @@
       "metadata": {
         "id": "IgOAhPup-aoe",
         "colab_type": "code",
+        "outputId": "65003f4b-5918-4c07-fd04-15c82f42baa5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "65003f4b-5918-4c07-fd04-15c82f42baa5"
+        }
       },
       "source": [
         "%tensorflow_version 1.x\n",
@@ -84,7 +85,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 71,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
