--- a/HW4_1.ipynb
+++ b/HW4_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HW4-1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9qbHEngcwT8eiFkjejW+O",
+      "authorship_tag": "ABX9TyNPniDuYP3AFZInad7e/4cp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,10 +61,10 @@
       "metadata": {
         "id": "X95q2cVbuGK7",
         "colab_type": "code",
-        "outputId": "5865c3b2-a6f3-470f-fd78-a172d945f475",
+        "outputId": "8e2b585d-acc5-4880-d682-0aac91fa1aa2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 374
+          "height": 677
         }
       },
       "source": [
@@ -135,7 +135,7 @@
         "\n",
         "for i in range(len(input_mat)):\n",
         "  # uncomment line for student code testing\n",
-        "  #output_mat = conv2d(input_mat[i], kernel_mat[i])\n",
+        "  output_mat = conv2d(input_mat[i], kernel_mat[i])\n",
         "\n",
         "  # uncomment lines below (and comment line above) for generating test cases.\n",
         "  if input_mat[i].shape[0] < kernel_mat[i].shape[0]:\n",
@@ -149,7 +149,7 @@
         "  else:\n",
         "    print(\"Incorrect output!\\n\")\n"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,79 +171,21 @@
             "\n",
             "[[4]]\n",
             "Correct output!\n",
-            "\n",
-            "[]\n",
-            "Correct output!\n",
             "\n"
           ],
           "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "q93sFVxuuGNj",
-        "colab_type": "code",
-        "outputId": "a8761a4e-041c-4c4b-8427-fb79e8849466",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136
-        }
-      },
-      "source": [
-        "import skimage.measure\n",
-        "\n",
-        "input_mat = []\n",
-        "expected_mat = []\n",
-        "s = []\n",
-        "input_mat.append(np.array([[1, 2, 1, 2],\n",
-        "                      [2, 4, 2, 1],\n",
-        "                      [1, 2, 4, 2],\n",
-        "                      [2, 1, 2, 1]]))\n",
-        "s.append(2)\n",
-        "\n",
-        "expected_mat.append(np.array([[4, 2],\n",
-        "                                [2, 4]]))\n",
-        "\n",
-        "input_mat.append(np.array([[1, 2, 1, 2, 4, 5],\n",
-        "                      [2, 4, 2, 1, 0, 3],\n",
-        "                      [1, 2, 4, 2, 4, 5],\n",
-        "                      [2, 1, 2, 1, 2, 1],\n",
-        "                      [1, 1, 2, 3, 1, 2]]))\n",
-        "s.append(2)\n",
-        "\n",
-        "expected_mat.append([[4, 2, 5],\n",
-        " [2, 4, 5],\n",
-        " [1, 3, 2]])\n",
-        "\n",
-        "\n",
-        "for i in range(len(input_mat)):\n",
-        "  # uncomment top line and comment second line to test code\n",
-        "  #output_mat = maxpooling2d(input_mat[i], s[i])\n",
-        "  output_mat = skimage.measure.block_reduce(input_mat[i], (s[i],s[i]), np.max)\n",
-        "\n",
-        "  print(output_mat)\n",
-        "\n",
-        "  if np.array_equal(output_mat, expected_mat[i]):\n",
-        "    print(\"Correct output!\")\n",
-        "  else:\n",
-        "    print(\"Incorrect output!\")\n"
-      ],
-      "execution_count": 0,
-      "outputs": [
+        },
         {
-          "output_type": "stream",
-          "text": [
-            "[[4 2]\n",
-            " [2 4]]\n",
-            "Correct output!\n",
-            "[[4 2 5]\n",
-            " [2 4 5]\n",
-            " [1 3 2]]\n",
-            "Correct output!\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "Exception",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-8-46ab1514dd8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     66\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_mat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m   \u001b[0;31m# uncomment line for student code testing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m   \u001b[0moutput_mat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconv2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_mat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkernel_mat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m   \u001b[0;31m# uncomment lines below (and comment line above) for generating test cases.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-4-153226fddc11>\u001b[0m in \u001b[0;36mconv2d\u001b[0;34m(input_mat, kernel_mat)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mkernel_shape\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0minput_mat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Kernel matrix should not be larger than the input matrix.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m   \u001b[0mnew_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput_mat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mkernel_shape\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mException\u001b[0m: Kernel matrix should not be larger than the input matrix."
+          ]
         }
       ]
     }
